--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-# Playground
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Basic Web Page</title>
+  <meta name="Val's Playground'" content="width=device-width,initial-scale=1" >
+  <link href="style.css" rel="stylesheet">
+</head>
+<body>
+  <h1>Val's Playground'</h1>
+  <p>Placeholder</p>
+
+  <script src="script.js"></script>
+</body>
+</html>
