--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Basic Web Page</title>
-  <meta name="Val's Playground'" content="width=device-width,initial-scale=1" >
+  <meta name="Val's Playground" content="width=device-width,initial-scale=1" >
   <link href="style.css" rel="stylesheet">
 </head>
 <body>
