--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link href="style.css" rel="stylesheet">
 </head>
 <body>
-  <h1>Val's Playground'</h1>
+  <h1>Val's Playground</h1>
   <p>Placeholder</p>
 
   <script src="script.js"></script>
