--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Basic Web Page</title>
+  <title>Val's Playground</title>
   <meta name="Val's Playground" content="width=device-width,initial-scale=1" >
   <link href="style.css" rel="stylesheet">
 </head>
