--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Val's Playground</title>
+  <title>Basic Web Page</title>
   <meta name="Val's Playground" content="width=device-width,initial-scale=1" >
   <link href="style.css" rel="stylesheet">
 </head>
@@ -11,9 +11,10 @@
   <p>Welcome to my headquarters! Fyi, this is an experiment so there's no design here whatsover :( Val's Playground 2.0 will tho ;)</p>
   <img src="image" alt="A picture of me flying" width="600" height="400">
 
- <br>
+ <br> <br>
     <h2>So... Who Am I?</h2>
       <p>I'm sure you've figured that my name is Val by this point. Although, for the sake of properly introducing myself... Hi, I'm Valerie Tang, I'm from Toronto, and I'll be starting Year 1 Computer Science in the fall.</p>
+   <br>
     <h4>Cool Stuff I've Done:</h4>
     <ul>
         <li>wrote and published 2 books at the ages of 16 and 17</li>
@@ -21,19 +22,20 @@
         <li>recorded cover songs and filmed music videos for them all by myself just to prove that I could</li>
         <li>walked a red carpet for a movie premiere with my favourite cartoon character when I was 6</li>
     </ul>
+   <br>
     <h4>Point is, I'm not a nerd... Well... not just a nerd... </h4>
 
-<br>
+<br><br>
   <h2>As For What This Site Is?</h2>
     <p>I suppose we can call it my homebase for whatever absurdity I think up in the tech realm. You'll find my projects here once I figure out what I'm doing.</p>
 
-<br>
+<br><br>
   <h2>More Val T.</h2>
      <p><a href="https://www.instagram.com/valerie.tang/" target="_blank">Instagram: @valerie.tang</a></p>
      <p><a href="https://www.x.com/valerietang/" target="_blank">X: @valerietang</a></p> 
      <p><a href="https://www.youtube.com/valerietang/" target="_blank">YouTube: Valerie Tang</a></p>
 
-<br>
+<br> <br>
   <h2>If you're looking for my books?</h2>
   <p>GOOD LUCK!</p>
   
