--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <br> <br>
   <h2>If you're looking for my books?</h2>
-  <p>GOOD LUCK!</p>
+  <p>GOOD LUCK... You won't be able to find them as I've taken both off the shelves. Maybe I'll write a revised version someday, not in the near future though.</p>
   
   <script src="script.js"></script>
 </body>
