--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 
 <br><br>
   <h2>As For What This Site Is?</h2>
-    <p>I suppose we can call it my homebase for whatever absurdity I think up in the tech realm. You'll find my projects here once I figure out what I'm doing.</p>
+    <p>I suppose we can call it my homebase for whatever absurdity I think up in the tech realm. You'll find my projects here once I figure out what I'm doing. Meanwhile, enjoy the first ever game I've coded!'</p>
+     <p><a href="https://valerietang.github.io/rockpaperscissorslizardspock/" target="_blank">Rock Paper Scissors Lizard Spock</a></p>
 
 <br><br>
   <h2>More Val T.</h2>
