--- a/index.html
+++ b/index.html
@@ -2,46 +2,81 @@
 <html>
 <head>
   <title>Val's Playground</title>
-  <meta name="Val's Playground" content="width=device-width,initial-scale=1" >
+  <meta name="Val's Playground" content="width=device-width,initial-scale=1">
   <link href="style.css" rel="stylesheet">
 </head>
 
 <body>
-  <h1>Val's Playground</h1>
-  <br>
-  <p>Welcome to my headquarters! Fyi, this is an experiment so there's no design here whatsover :( Val's Playground 2.0 will tho ;)</p>
-  <br>
-  <img src="profilepic" alt="A picture of me flying" width="816" height="612">
+  <!-- Header -->
+  <header>
+    <nav>
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
- <br> <br>
-    <h2>So... Who Am I?</h2>
-      <p>I'm sure you've figured that my name is Val by this point. Although, for the sake of properly introducing myself... <br> Hi, I'm Valerie Tang, I'm from Toronto, and I'll be starting Year 1 Computer Science in the fall.</p>
-   <br>
-    <h4>Cool Stuff I've Done:</h4>
-    <ul>
+  <!-- Main Content -->
+  <main id="home">
+    <section>
+      <h1>Val's Playground</h1>
+      <br>
+      <p>Welcome to my headquarters! Fyi, this is an experiment so there's no design here whatsover :( Val's Playground 2.0 will tho ;)</p>
+      <br>
+      <img src="image" alt="A picture of me flying" width="816" height="612">
+    </section>
+
+    <section id="about">
+      <br><br>
+      <h2>So... Who Am I?</h2>
+      <br>
+      <p>I'm sure you've figured that my name is Val by this point. Although, for the sake of properly introducing myself... <br>Hi, I'm Valerie Tang, I'm from Toronto, and I'll be starting Year 1 Computer Science in the fall.</p>
+      <br>
+      <h4>Cool Stuff I've Done:</h4>
+      <ul>
         <li>wrote and published 2 books at the ages of 16 and 17</li>
         <li>flown a glider and a Cessna 182 Skylane plane (legit, I had the controls for 10 seconds LOL)</li>
         <li>recorded cover songs and filmed music videos for them all by myself just to prove that I could</li>
         <li>walked a red carpet for a movie premiere with my favourite cartoon character when I was 6</li>
-    </ul>
-   <br>
-    <h4>Point is, I'm not a nerd... Well... not just a nerd... </h4>
+      </ul>
+      <br>
+      <h4>Point is, I'm not a nerd... Well... not just a nerd... </h4>
+    </section>
 
-<br><br>
-  <h2>As For What This Site Is?</h2>
-    <p>I suppose we can call it my homebase for whatever absurdity I think up in the tech realm. You'll find my projects here once I figure out what I'm doing. Meanwhile, enjoy the first ever game I've coded!</p>
-     <p><a href="https://valerietang.github.io/rockpaperscissorslizardspock/" target="_blank">Rock Paper Scissors Lizard Spock</a></p>
+    <section id="projects">
+      <br><br>
+      <h2>As For What This Site Is?</h2>
+      <br>
+      <p>I suppose we can call it my homebase for whatever absurdity I think up in the tech realm. You'll find my projects here once I figure out what I'm doing.<br>Meanwhile, enjoy the first ever game I've coded!</p>
+      <br>
+      <p><a href="https://valerietang.github.io/rockpaperscissorslizardspock/" target="_blank"><button>Rock Paper Scissors Lizard Spock</button></a></p>
+    </section>
 
-<br><br>
-  <h2>More Val T.</h2>
-     <p><a href="https://www.instagram.com/valerie.tang/" target="_blank">Instagram: @valerie.tang</a></p>
-     <p><a href="https://www.x.com/valerietang/" target="_blank">X: @valerietang</a></p> 
-     <p><a href="https://www.youtube.com/valerietang/" target="_blank">YouTube: Valerie Tang</a></p>
+    <section>
+      <br><br>
+      <h2>More Val T.</h2>
+      <br>
+      <p><a href="https://www.instagram.com/valerie.tang/" target="_blank"><button>Instagram: @valerie.tang</button></a></p>
+      <p><a href="https://www.x.com/valerietang/" target="_blank"><button>X: @valerietang</button></a></p> 
+      <p><a href="https://www.youtube.com/valerietang/" target="_blank"><button>YouTube: Valerie Tang</button></a></p>
+    </section>
 
-<br> <br>
-  <h2>If you're looking for my books?</h2>
-  <p>GOOD LUCK... You won't be able to find them as I've taken both off the shelves. Maybe I'll write a revised version someday, not in the near future though.</p>
-  
+    <section id="contact">
+      <br><br>
+      <h2>If you're looking for my books?</h2> <br>
+      <p>GOOD LUCK... You won't be able to find them as I've taken both off the shelves. Maybe I'll write a revised version someday, not in the near future though.</p>
+      <br><br>
+    </section>
+  </main>
+
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2024 Val's Playground. All rights reserved.</p>
+  </footer>
+
   <script src="script.js"></script>
 </body>
 </html>
