--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <br>
       <p>Welcome to my headquarters! Fyi, this is an experiment so there's no design here whatsover :( Val's Playground 2.0 will tho ;)</p>
       <br>
-      <img src="image" alt="A picture of me flying" width="816" height="612">
+      <img src="profilepic" alt="A picture of me flying" width="816" height="612">
     </section>
 
     <section id="about">
@@ -47,7 +47,7 @@
     </section>
 
     <section id="projects">
-      <br><br>
+      <br>
       <h2>As For What This Site Is?</h2>
       <br>
       <p>I suppose we can call it my homebase for whatever absurdity I think up in the tech realm. You'll find my projects here once I figure out what I'm doing.<br>Meanwhile, enjoy the first ever game I've coded!</p>
@@ -56,7 +56,7 @@
     </section>
 
     <section>
-      <br><br>
+      <br>
       <h2>More Val T.</h2>
       <br>
       <p><a href="https://www.instagram.com/valerie.tang/" target="_blank"><button>Instagram: @valerie.tang</button></a></p>
@@ -65,7 +65,7 @@
     </section>
 
     <section id="contact">
-      <br><br>
+      <br>
       <h2>If you're looking for my books?</h2> <br>
       <p>GOOD LUCK... You won't be able to find them as I've taken both off the shelves. Maybe I'll write a revised version someday, not in the near future though.</p>
       <br><br>
