--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section>
       <h1>Val's Playground</h1>
       <br>
-      <p>Welcome to my headquarters! Fyi, this is an experiment so there's no design here whatsover :( Val's Playground 2.0 will tho ;)</p>
+      <p>Welcome to my headquarters! Fyi, this is an experiment so there isn't much desgin here. Val's Playground 2.0 will be cool tho ;)</p>
       <br>
       <img src="profilepic" alt="A picture of me flying" width="816" height="612">
     </section>
