--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Val's Playground</title>
   <meta name="Val's Playground" content="width=device-width,initial-scale=1">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Montserrat:wght@700&display=swap" rel="stylesheet">
   <link href="style.css" rel="stylesheet">
 </head>
 
