--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
       <p>GOOD LUCK... You won't be able to find them as I've taken both off the shelves. Maybe I'll write a revised version someday, not in the near future though.</p>
       <br><br>
     </section>
-    <p>&copy; 2024 Val's Playground. All rights reserved.</p>
+    <br>
+    <p>&copy; 2024 Val's Playground.</p>
   </main>
 
 </html>
