--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <br><br>
     </section>
     <br>
-    <p>&copy; 2024 Val's Playground.</p>
+    <p>&copy; 2024 by Valerie Tang</p>
   </main>
 
 </html>
