--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 </head>
 
 <body>
-  <!-- Header -->
   <header>
     <nav>
       <ul>
@@ -20,7 +19,6 @@
     </nav>
   </header>
 
-  <!-- Main Content -->
   <main id="home">
     <section>
       <h1>Val's Playground</h1>
@@ -51,7 +49,7 @@
       <br>
       <h2>As For What This Site Is?</h2>
       <br>
-      <p>I suppose we can call it my homebase for whatever absurdity I think up in the tech realm. You'll find my projects here once I figure out what I'm doing.<br>Meanwhile, enjoy the first ever game I've coded!</p>
+      <p>I suppose we can call it my homebase for whatever absurdity I think up in the tech realm. You'll find my projects here once I figure out what I'm doing.Meanwhile, enjoy the first ever game I've coded!</p>
       <br>
       <p><a href="https://valerietang.github.io/rockpaperscissorslizardspock/" target="_blank"><button>Rock Paper Scissors Lizard Spock</button></a></p>
     </section>
