--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <main id="home">
     <section>
-      <h1>Val's Playground</h1>
+      <h1>VAL'S PLAYGROUND</h1>
       <br>
       <p>Welcome to my headquarters! Fyi, this is an experiment so there isn't much desgin here. Val's Playground 2.0 will be cool tho ;)</p>
       <br>
