--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section>
       <h1>VAL'S PLAYGROUND</h1>
       <br>
-      <p>Welcome to my headquarters! Fyi, this is an experiment so there isn't much desgin here. Val's Playground 2.0 will be cool tho ;)</p>
+      <p>Welcome to my headquarters! Fyi, this is an experiment so there isn't much design here. Val's Playground 2.0 will be cool tho ;)</p>
       <br>
       <img src="profilepic" alt="A picture of me flying" width="816" height="612">
     </section>
