--- a/index.html
+++ b/index.html
@@ -54,16 +54,16 @@
       <p><a href="https://valerietang.github.io/rockpaperscissorslizardspock/" target="_blank"><button>Rock Paper Scissors Lizard Spock</button></a></p>
     </section>
 
-    <section>
+    <section id="contact">>
       <br>
-      <h2>More Val T.</h2>
+      <h2>More Valerie Tang</h2>
       <br>
       <p><a href="https://www.instagram.com/valerie.tang/" target="_blank"><button>Instagram: @valerie.tang</button></a></p>
       <p><a href="https://www.x.com/valerietang/" target="_blank"><button>X: @valerietang</button></a></p> 
       <p><a href="https://www.youtube.com/valerietang/" target="_blank"><button>YouTube: Valerie Tang</button></a></p>
     </section>
 
-    <section id="contact">
+    <section id=extra>
       <br>
       <h2>If you're looking for my books?</h2> <br>
       <p>GOOD LUCK... You won't be able to find them as I've taken both off the shelves. Maybe I'll write a revised version someday, not in the near future though.</p>
