--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <p><a href="https://valerietang.github.io/rockpaperscissorslizardspock/" target="_blank"><button>Rock Paper Scissors Lizard Spock</button></a></p>
     </section>
 
-    <section id="contact">>
+    <section id="contact">
       <br>
       <h2>More Valerie Tang</h2>
       <br>
