--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section>
       <h1>VAL'S PLAYGROUND</h1>
       <br>
-      <p>Welcome to my headquarters! Fyi, this is an experiment so there isn't much design here. Val's Playground 2.0 will be cool tho ;)</p>
+      <p>Welcome to my headquarters for whatever absurdity I think up in the tech realm!</p>
       <br>
       <img src="profilepic" alt="A picture of me flying" width="816" height="612">
     </section>
@@ -47,9 +47,9 @@
 
     <section id="projects">
       <br>
-      <h2>As For What This Site Is?</h2>
+      <h2>Fun Stuff</h2>
       <br>
-      <p>I suppose we can call it my homebase for whatever absurdity I think up in the tech realm. You'll find my projects here once I figure out what I'm doing. Meanwhile, enjoy the first ever game I've coded!</p>
+      <p>You'll find more projects here once I figure out what I'm doing. Meanwhile, enjoy the first-ever game I've coded!</p>
       <br>
       <p><a href="https://valerietang.github.io/rockpaperscissorslizardspock/" target="_blank"><button>Rock Paper Scissors Lizard Spock</button></a></p>
     </section>
@@ -66,7 +66,7 @@
     <section id=extra>
       <br>
       <h2>If you're looking for my books?</h2> <br>
-      <p>GOOD LUCK... You won't be able to find them as I've taken both off the shelves. Maybe I'll write a revised version someday, not in the near future though.</p>
+      <p>GOOD LUCK... You won't be able to find them as I've taken both off the shelves. I might just work on a revised version someday though.</p>
       <br><br>
     </section>
     <br>
