--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <section id="contact">
       <br>
-      <h2>More Valerie Tang</h2>
+      <h2>Socials</h2>
       <br>
       <p><a href="https://www.instagram.com/valerie.tang/" target="_blank"><button>Instagram: @valerie.tang</button></a></p>
       <p><a href="https://www.x.com/valerietang/" target="_blank"><button>X: @valerietang</button></a></p> 
