--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section>
       <h1>VAL'S PLAYGROUND</h1>
       <br>
-      <p>Welcome to my headquarters for whatever absurdity I think up in the tech realm!</p>
+      <p>Welcome to my headquarters for whatever fun and absurdities I think up in the tech realm!</p>
       <br>
       <img src="profilepic" alt="A picture of me flying" width="816" height="612">
     </section>
