--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <section id="projects">
       <br>
       <h2>Fun Stuff</h2>
+      <img src="littleme" alt="A picture of little me at a playground" width="816" height="612">
       <br>
       <p>You'll find more projects here once I figure out what I'm doing. Meanwhile, enjoy the first-ever game I've coded!</p>
       <br>
