--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section id="about">
       <h2>So... Who Am I?</h2>
       <img src="profilepic" alt="A picture of me flying" width="816" height="612">
-      <p>I'm sure you've figured that my name is Val by this point. Although, for the sake of properly introducing myself... Hi, I'm Valerie Tang, I'm from Toronto, and I'll be starting Year 1 Computer Science in the fall.</p>
+      <p>I'm sure you've figured that my name is Val by this point. Although, for the sake of properly introducing myself... Hi, my name is Valerie Tang but most of my friends call me Val. I'm from Toronto, and I'm a Year 1 Computer Science student at York University.</p>
       <br>
       <h4>Cool Stuff I've Done:</h4>
       <ul>
