--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <section id=extra>
       <br>
       <h2>If you're looking for my books?</h2> <br>
-      <p>GOOD LUCK... You won't be able to find them as I've taken both off the shelves. I might just work on a revised version someday though.</p>
+      <p>GOOD LUCK... You won't be able to find them as I've taken both off the shelves. I have a feeling that I'll write another book someday though.</p>
       <br><br>
     </section>
     <br>
