--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
     <section>
       <h1>VAL'S PLAYGROUND</h1>
       <br>
-      <p>Welcome to my headquarters for whatever fun and absurdities I think up in the tech realm!</p>
+      <p>Welcome to my headquarters for whatever fun and absurdities I think up!</p>
     </section>
 
     <section id="about">
       <h2>So... Who Am I?</h2>
       <img src="profilepic" alt="A picture of me flying" width="816" height="612">
-      <p>I'm sure you've figured that my name is Val by this point. Although, for the sake of properly introducing myself... Hi, my name is Valerie Tang but most of my friends call me Val. I'm from Toronto, and I'm a Year 1 Computer Science student at York University.</p>
+      <p>I'm sure you've figured that my name is Val by this point. Although, for the sake of properly introducing myself... Hi, my name is Valerie Tang but most of my friends call me Val. I'm a writer and Year 1 Computer Science student from Toronto.</p>
       <br>
       <h4>Cool Stuff I've Done:</h4>
       <ul>
@@ -63,12 +63,12 @@
 
     <section id=extra>
       <br>
-      <h2>If you're looking for my books?</h2> <br>
-      <p>GOOD LUCK... You won't be able to find them as I've taken both off the shelves. I have a feeling that I'll write another book someday though.</p>
+      <h2>Looking for my old books?</h2> <br>
+      <p>GOOD LUCK... You won't be able to find them as I've taken both off the shelves. I have a feeling that I'll do a version 2.0 for Conditional Humanity someday though.</p>
       <br><br>
     </section>
     <br>
-    <p>&copy; 2024 by Valerie Tang</p>
+    <p>&copy; 2025 by Valerie Tang</p>
   </main>
 
 </html>
