--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <section id=extra>
       <br>
       <h2>Looking for my old books?</h2> <br>
-      <p>GOOD LUCK... You won't be able to find them as I've taken both off the shelves. I have a feeling that I'll do a version 2.0 for Conditional Humanity someday though.</p>
+      <p>GOOD LUCK... You won't be able to find them as I've taken both off the shelves. I have a feeling that I'll write a version 2.0 for Conditional Humanity someday though.</p>
       <br><br>
     </section>
     <br>
